refactor(scoreboard): consolidate packet sending logic